deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-landing
spec:
  selector:
    matchLabels:
      app: my-landing
  template:
    metadata:
      labels:
        app: my-landing
    spec:
      imagePullSecrets:
        - name: pipeline-registry
      containers:
      - name: my-landing
        image: 	my-landing
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-landing-svc
spec:
  selector:
    app: my-landing
  ports:
  - port: 80
    targetPort: 80
