ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-landing-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"    
spec:
  tls:
  - hosts:
    - my-landing.com
  rules:
  - host: my-landing.com
    http:
      paths:
      - path: /
        backend:
          serviceName: my-landing-svc
          servicePort: 80
